# ApiGateway/internal/routes/routes.go
@@ -10,7 +10,7 @@ import (
 func SetUpRoutes(r *gin.Engine) {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	app := r.Group("/api")
-	app.POST("/auth/login", handlers.Login)
+	app.POST("/auth/login/:code", handlers.Login)
 	UserRoutes(app)
 	IELTSRoutes(app)
 }
